--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body class="fullscreen">
   <div class="container">
     <h1 class="title">Hello World!</h1>
+    <p id="demo"></p>
   </div>
   <script src="js/main.js"></script>
 </body>
