--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="white"/>
 </head>
-<body class="fullscreen">
+<body class="fullscreen" oncopy="return false" oncut="return false" onpaste="return false">
   <div class="container">
     <h1 class="title">Hello World!</h1>
     <p id="demo"></p>
