--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <div class="container">
     <h1 class="title">Hello World!</h1>
     <p id="demo"></p>
+    <button id="disable">Disable Copy/Paste</button>
   </div>
   <script src="js/main.js"></script>
 </body>
